--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  box-sizing: border-box;
+  outline: 0;
+  margin: 0;
+  border: 0;
+  padding: 0;
+}
+
+html,
+body {
+  height: 100%;
+}
+body {
+  display: grid;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
